--- a/app/assets/stylesheets/overview.css.scss
+++ b/app/assets/stylesheets/overview.css.scss
@@ -1,5 +1,13 @@
 #overview {
   text-align: center;
+
+  .icon-passmaster {
+    background-image: url('/img/combination-32.png');
+    background-position: 0;
+    width: 32px;
+    height: 32px;
+    margin-top: 4px;
+  }
 }
 
 #features {
