more copy updates and style changes for the homepage

--- a/app/assets/stylesheets/overview.css.scss
+++ b/app/assets/stylesheets/overview.css.scss
@@ -1,5 +1,7 @@
 #overview {
-  text-align: center;
+  .centered {
+    text-align: center;
+  }
 
   .icon-passmaster {
     background-image: url('/img/combination-32.png');
