--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
         = yield
     #footer
       %p
-        BTC donations: 1ETVgecCKGvggpLGZ1mMEFffEJgjorscy8
+        Donate: 1ETVgecCKGvggpLGZ1mMEFffEJgjorscy8
       %p
         %a{ :target => '_blank', :href => 'mailto:support@passmaster.io' } contact
         | &copy; #{Date.today.year} Passmaster.io
