--- a/app/views/application/_overview.html.haml
+++ b/app/views/application/_overview.html.haml
@@ -13,7 +13,7 @@
     %p
       Passmaster is a simple tool for storing usernames and passwords securely in the cloud.
       All of your account details are encrypted with a single master password making it easy
-      to use a different passwords for each site you visit. Check out the features below.
+      to use different passwords for each site you visit. Check out the features below.
 
     #features
       .feature.pull-left
