don't show restore menu on iOS

--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -23,7 +23,7 @@
           %li.divider
           %li
             %a#backup_accounts_link{ :href => '#' } Backup
-          %li
+          %li#restore_accounts_list_item{ :style => 'display: none;' }
             %a#restore_accounts_link{ :href => '#' } Restore
     .clearfix
 
