update overview copy

--- a/app/views/application/_overview.html.haml
+++ b/app/views/application/_overview.html.haml
@@ -24,9 +24,9 @@
               Works Everywhere
             %p
               Passmaster works on any modern browser on all operating systems. No browser extensions or special software is
-              required. There are also free mobile apps available for Android in the
+              required. Just browse to https://passmaster.io or use one of the free mobile apps available for Android on the
               %a{ :target => '_blank', :href => 'https://play.google.com/store/apps/details?id=io.passmaster.Passmaster' } Play Store
-              and iOS in the
+              and iOS on the
               = succeed '.' do
                 %a{ :target => '_blank', :href => 'https://itunes.apple.com/us/app/passmaster/id615271561?mt=8' } App Store
         .feature-inner
