turn the bitcoin address into a link

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,8 @@
         = yield
     #footer
       %p
-        Donate: 1ETVgecCKGvggpLGZ1mMEFffEJgjorscy8
+        Donate:
+        %a{ :target => '_blank', :href => 'bitcoin:1ETVgecCKGvggpLGZ1mMEFffEJgjorscy8' } 1ETVgecCKGvggpLGZ1mMEFffEJgjorscy8
       %p
         %a{ :target => '_blank', :href => 'mailto:support@passmaster.io' } contact
         | &copy; #{Date.today.year} Passmaster.io
