add icon to update page

--- a/app/assets/stylesheets/updates.css.scss
+++ b/app/assets/stylesheets/updates.css.scss
@@ -1,4 +1,11 @@
 #updates {
+  .icon-passmaster {
+    background-image: url('/img/combination-32.png');
+    background-position: 0;
+    width: 32px;
+    height: 32px;
+  }
+
   h4.update-date {
     margin-top: 40px;
   }
