--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -1,6 +1,8 @@
 #updates.container
   .well
-    %h3 Updates
+    %h3
+      %i.icon.icon-passmaster
+      Updates
 
     %h4.update-date 2014-02-26
     %ul
