--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,11 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2014-03-03
+    %ul
+      %li New notifications UI
+      %li Better copy to clipboard support for the mobile apps
+
     %h4.update-date 2014-02-26
     %ul
       %li Added this updates page
