--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -12,6 +12,9 @@
     %strong New Updates Available!
     %a.reload-link{ :href => '#' } Click here for the latest version.
 
+#notification_container.container
+  #notification.alert.alert-info{ :style => 'display:none;' }
+
 = render 'overview'
 = render 'verify'
 = render 'configure'
