add jquery color plugin for highlighting copying to clipboard, improve username/password box styles for iOS, use courier font for username box

--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -53,10 +53,6 @@
     border-radius: 4px;
   }
 
-  input.password {
-    font-family: Courier !important;
-  }
-
   .read {
     table {
       width: 100%;
@@ -83,9 +79,15 @@
     input[type='text'] {
       margin: 0;
     }
+    .click-to-copy-username,.click-to-copy-password {
+      -webkit-tap-highlight-color: transparent;
+    }
     input.username,input.password {
+      font-family: Courier !important;
       cursor: default;
       background-color: #eee;
+      -webkit-text-fill-color: #333;
+      -webkit-opacity: 1;
     }
     tr.notes,tr.no-notes {
       text-align: center;
