update gems and use different click to copy text on mobile vs web

--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -88,7 +88,7 @@
                   %td.field-label P:
                   %td{ :colspan => '2' }
                     .click-to-copy-password
-                      %input.password.input-block-level{ :type => 'text', :name => 'password', 'data-password-visible' => 'false', 'data-default-value' => 'click to copy' }
+                      %input.password.input-block-level{ :type => 'text', :name => 'password', 'data-password-visible' => 'false', 'data-default-value' => 'click to show' }
                 %tr.no-notes
                   %td{ :colspan => '3' } No Notes
                 %tr.notes{ :style => 'display:none;' }
