--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -7,6 +7,7 @@
     %h4.update-date 2014-03-14
     %ul
       %li Clarify that passwords are only copied automatically on mobile
+      %li Better font for deferentiating similar characters in usernames and passwords
 
     %h4.update-date 2014-03-03
     %ul
