update to rails 4.1.0 and ruby 2.1.1

--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,13 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2014-04-14
+    %ul
+      %li
+        Updated the
+        %a{ :target => '_blank', :href => 'https://bitwiseshiftleft.github.io/sjcl/' } Stanford Javascript Crypto Library
+      %li Security updates
+
     %h4.update-date 2014-04-01
     %ul
       %li Security updates
