--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2014-06-16
+    %ul
+      %li Security updates
+
     %h4.update-date 2014-04-14
     %ul
       %li
