--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,16 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2014-08-03
+    %ul
+      %li Passmaster is now open source!
+      %li
+        %a{ :target => '_blank', :href => 'https://github.com/ryanjohns/passmaster' } Passmaster server
+      %li
+        %a{ :target => '_blank', :href => 'https://github.com/ryanjohns/PassmasterAndroid' } Passmaster Android
+      %li
+        %a{ :target => '_blank', :href => 'https://github.com/ryanjohns/PassmasterIOS' } Passmaster iOS
+
     %h4.update-date 2014-07-02
     %ul
       %li Security updates
