--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2014-08-07
+    %ul
+      %li No longer minify javascript and CSS. This should make it easier to view source and see that the JS being served is legit. (Thanks Stephen McCarthy!)
+
     %h4.update-date 2014-08-03
     %ul
       %li Passmaster is now open source!
