--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2014-09-15
+    %ul
+      %li Focus the search box after unlocking accounts
+
     %h4.update-date 2014-08-08
     %ul
       %li Generate passwords more uniformly. (Thanks Stephen McCarthy!)
