update to ruby 2.1.4

--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,14 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2014-11-06
+    %ul
+      %li Security updates
+      %li
+        %a{ :target => '_blank', :href => 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-3566' } CVE-2014-3566
+      %li
+        %a{ :target => '_blank', :href => 'https://groups.google.com/forum/#!topic/rubyonrails-security/dCp7duBiQgo' } CVE-2014-7818
+
     %h4.update-date 2014-09-15
     %ul
       %li Focus the search box after unlocking accounts
