split third-party libraries into separate asset files and add a rake task for verifying assets

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,9 @@
 /*
- *= require bootstrap
- *= require bootstrap-responsive
- *= require_tree .
+ *= require accounts
+ *= require configure
+ *= require overview
+ *= require settings
+ *= require updates
+ *= require util
+ *= require verify
  */
