--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,9 @@
     %meta{ :name => 'csrf-param', :content => request_forgery_protection_token }
     %meta{ :name => 'csrf-token', :content => '' }
     %title Passmaster
+    = stylesheet_link_tag 'libraries'
     = stylesheet_link_tag 'application'
+    = javascript_include_tag 'libraries'
     = javascript_include_tag 'application'
 
   %body
