--- a/app/views/layouts/updates.html.haml
+++ b/app/views/layouts/updates.html.haml
@@ -5,6 +5,7 @@
     %meta{ 'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8' }
     %meta{ :name => 'viewport', :content => 'initial-scale=1.0, maximum-scale=1.0, user-scalable=no' }
     %title Updates - Passmaster
+    = stylesheet_link_tag 'libraries'
     = stylesheet_link_tag 'application'
 
   %body
