--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,13 +4,26 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2014-12-03
+    %ul
+      %li
+        Updated the
+        %a{ :target => '_blank', :href => 'https://bitwiseshiftleft.github.io/sjcl/' } Stanford Javascript Crypto Library
+      %li Security updates
+      %ul
+        %li
+          %a{ :target => '_blank', :href => 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-8090' } CVE-2014-8090
+        %li
+          %a{ :target => '_blank', :href => 'https://groups.google.com/forum/#!topic/rubyonrails-security/rMTQy4oRCGk' } CVE-2014-7829
+
     %h4.update-date 2014-11-06
     %ul
       %li Security updates
-      %li
-        %a{ :target => '_blank', :href => 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-3566' } CVE-2014-3566
-      %li
-        %a{ :target => '_blank', :href => 'https://groups.google.com/forum/#!topic/rubyonrails-security/dCp7duBiQgo' } CVE-2014-7818
+      %ul
+        %li
+          %a{ :target => '_blank', :href => 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-3566' } CVE-2014-3566
+        %li
+          %a{ :target => '_blank', :href => 'https://groups.google.com/forum/#!topic/rubyonrails-security/dCp7duBiQgo' } CVE-2014-7818
 
     %h4.update-date 2014-09-15
     %ul
@@ -27,12 +40,13 @@
     %h4.update-date 2014-08-03
     %ul
       %li Passmaster is now open source!
-      %li
-        %a{ :target => '_blank', :href => 'https://github.com/ryanjohns/passmaster' } Passmaster server
-      %li
-        %a{ :target => '_blank', :href => 'https://github.com/ryanjohns/PassmasterAndroid' } Passmaster Android
-      %li
-        %a{ :target => '_blank', :href => 'https://github.com/ryanjohns/PassmasterIOS' } Passmaster iOS
+      %ul
+        %li
+          %a{ :target => '_blank', :href => 'https://github.com/ryanjohns/passmaster' } Passmaster Server
+        %li
+          %a{ :target => '_blank', :href => 'https://github.com/ryanjohns/PassmasterAndroid' } Passmaster Android
+        %li
+          %a{ :target => '_blank', :href => 'https://github.com/ryanjohns/PassmasterIOS' } Passmaster iOS
 
     %h4.update-date 2014-07-02
     %ul
