automatically add http:// to urls and improve the MFA auth label

--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -107,7 +107,7 @@
                   %tr
                     %td.field-label W:
                     %td
-                      %input.url.input-block-level{ :type => 'url', :name => 'url', :placeholder => 'Website URL', :autocomplete => 'off', :autocorrect => 'off', :autocapitalize => 'off' }
+                      %input.url.input-block-level{ :type => 'text', :name => 'url', :placeholder => 'Website URL', :autocomplete => 'off', :autocorrect => 'off', :autocapitalize => 'off' }
                   %tr
                     %td.field-label U:
                     %td
