--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2015-01-13
+    %ul
+      %li Automatically add http:// to Website URLs
+
     %h4.update-date 2014-12-03
     %ul
       %li
