add support for unlocking accounts using Touch ID in the iOS app

--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2015-03-02
+    %ul
+      %li Add support for unlocking accounts using Touch ID in the iOS app
+
     %h4.update-date 2015-01-13
     %ul
       %li Automatically add http:// to Website URLs
