--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -37,6 +37,8 @@
       %form#unlock_accounts_form
         %p= password_field_tag(:passwd, '', :placeholder => 'Master Password', :class => 'input-xlarge', :id => 'unlock_accounts_passwd', :required => true)
         %p= submit_tag('Unlock', :class => 'btn btn-primary', :id => 'unlock_accounts_btn')
+        %p
+          %button#unlock_touchid_btn.btn.btn-inverse{ :type => 'button', :title => 'Unlock with Touch ID', :style => 'display: none;' } Unlock with Touch ID
 
   #accounts_list{ :style => 'display:none;' }
     #verify_email_notice{ :style => 'display:none;' }
