add a user preference for enabling Touch ID support

--- a/app/views/application/_overview.html.haml
+++ b/app/views/application/_overview.html.haml
@@ -29,6 +29,8 @@
               and iOS on the
               = succeed '.' do
                 %a{ :target => '_blank', :href => 'https://itunes.apple.com/us/app/passmaster/id615271561?mt=8' } App Store
+              The mobile apps provide single-tap copy to clipboard of usernames and passwords and the iOS app allows unlocking
+              via Touch ID.
         .feature-inner
           %h5
             %i.icon.icon-briefcase
