--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,13 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2015-03-03
+    %ul
+      %li
+        Add a user preference for enabling Touch ID support (only available in the
+        = succeed ')' do
+          %a{ :target => '_blank', :href => 'https://itunes.apple.com/us/app/passmaster/id615271561?mt=8' } iOS app
+
     %h4.update-date 2015-03-02
     %ul
       %li Add support for unlocking accounts using Touch ID in the iOS app
