better error handling for whcn touch id fails

--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2015-03-06
+    %ul
+      %li Better error handling when Touch ID authentication is unsuccessful
+
     %h4.update-date 2015-03-03
     %ul
       %li
