update sprockets to 3.0.1 and make some changes for SEO

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,9 @@
     %meta{ :name => 'apple-mobile-web-app-capable', :content => 'yes' }
     %meta{ :name => 'csrf-param', :content => request_forgery_protection_token }
     %meta{ :name => 'csrf-token', :content => '' }
-    %title Passmaster
+    %meta{ :name => 'description', :content => 'A simple tool for storing usernames and passwords securely in the cloud. All of your account details are encrypted with a single master password making it easy to use different passwords for each site you visit.' }
+    %meta{ :name => 'keywords', :content => 'password, password manager, account manager, encryption, host-proof, host-proof encryption, lastpass, 1password, passwordbox, master password, secure passwords, password generator' }
+    %title Passmaster - Encrypted Password Manager for Web and Mobile
     = stylesheet_link_tag 'libraries'
     = stylesheet_link_tag 'application'
     = javascript_include_tag 'libraries'
