--- a/app/views/application/_overview.html.haml
+++ b/app/views/application/_overview.html.haml
@@ -54,7 +54,7 @@
             %i.icon.icon-lock
             Host-Proof Encryption
           %p
-            Your account details are for your eyes only so everything is encrypted with javasript directly on your
+            Your account details are for your eyes only so everything is encrypted with javascript directly on your
             computer or mobile device before being saved to the cloud. Only you know the master
             password so no one, not even the server admins, can see anything about your account details.
       .feature.pull-left
