email addresses are now case insensitive

--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2015-07-16
+    %ul
+      %li Email addresses are now case-insensitive
+
     %h4.update-date 2015-06-16
     %ul
       %li Security updates
