--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2015-09-04
+    %ul
+      %li Fixed an issue preventing tab and ctrl + r from working while a username or password field was selected
+
     %h4.update-date 2015-07-16
     %ul
       %li Email addresses are now case-insensitive
