--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2016-01-17
+    %ul
+      %li Disable the file backup option on iOS devices because there is no way to store an arbitrary file
+
     %h4.update-date 2015-09-04
     %ul
       %li Fixed an issue preventing tab and ctrl + r from working while a username or password field was selected
